# rsweb

./: .gitignore  README.md  index.js  measure.js  package-lock.json  package.json  radar-diff-passed-1.csv  radar-diff-passed-1.out  radar-passed.csv  record.js  replay.js  top-sites-url-10000.txt
recd/: Cargo.toml  build.rs  run.sh
recd/protos/: mahimahi.proto
recd/src/: activity.rs  dependency.rs  differences.rs  identify.rs  lib.rs  mahimahi.rs  resource.rs
recorder/: checker.py  filter.py  id.py  measure.py  pageload.py  record.py  replay.py
