[package]
name = "recd"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
docopt = "1"
protobuf = "2.16.2"
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
url = "2.2.2"
lazy_static = "1.4"
clap = { version = "4.0", features = ["derive"] }
flate2 = "1.0"

[build-dependencies]
protoc-rust = "2.14"
